--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "mysql2": "^1.5.3",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
     "sequelize": "^3.31.0"
   },
   "devDependencies": {
